2016-04-15  Daniel Bates  <dabates@apple.com>

        CSP: Ignore paths in CSP matching after redirects
        https://bugs.webkit.org/show_bug.cgi?id=153154
        <rdar://problem/24383215>

        Reviewed by Brent Fulgham.

        Add tests to ensure that we ignore the path component of a source expression when matching
        a sub-resource URL that is the result of a redirect.

        * TestExpectations: Unskip test http/tests/security/contentSecurityPolicy/redirect-does-not-match-paths.html as it now passes.
        * http/tests/security/contentSecurityPolicy/audio-redirect-allowed2-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/audio-redirect-allowed2.html: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-allowed-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-allowed.html: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-allowed2-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-allowed2.html: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-blocked-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-blocked.html: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-blocked2-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-blocked2.html: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-blocked3-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/embed-redirect-blocked3.html: Added.
        * http/tests/security/contentSecurityPolicy/font-redirect-allowed2-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/font-redirect-allowed2.html: Added.
        * http/tests/security/contentSecurityPolicy/form-action-src-redirect-allowed-expected.txt: Added.