@@ -1,3 +1,15 @@
+2016-04-15  Myles C. Maxfield  <mmaxfield@apple.com>
+
+        [Font Loading] Test promise gets rejected when unknown format used
+        https://bugs.webkit.org/show_bug.cgi?id=156643
+
+        Reviewed by Simon Fraser.
+
+        When all the sources have an unknown format, the promise should be rejected.
+
+        * fast/text/font-face-javascript-expected.txt:
+        * fast/text/font-face-javascript.html:
+
 2016-04-15  Daniel Bates  <dabates@apple.com>
 
         CSP: Ignore paths in CSP matching after redirects
